# knx2mqtt

./: .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  config-docker-compose.ini  config-docker.ini  config-example.ini  pyproject.toml
mosquitto/: mosquitto.conf
src/knx2mqtt/: __init__.py  knx2mqtt.py  mqtt.py
src/knxmonitor/: __init__.py  main.py  mqtt_client.py  project_index.py
src/knxmonitor/static/: index.html
