[project]
name = "knx2mqtt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ragdk", email = "83765551+ragdk@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "xknx>=3.6.0",
    "xknxproject>=3.8.2",
]

[project.scripts]
knx2mqtt = "knx2mqtt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
